--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,7 @@ body {
 }
 
 body {
+  font-family: var(--font-inter);
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
   position: relative;
