--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -346,7 +346,8 @@
 */
 
 .skills {
-    scroll-snap-align: center;
+    height: 100vh;
+    scroll-snap-align: start;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -490,7 +491,7 @@
     scroll-snap-align: start;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 100vh;
     color: rgb(var(--clr-1));
@@ -530,6 +531,7 @@
     align-items: flex-start;
     justify-content: space-around;
     gap: 1rem;
+    bottom: 0;
     margin-top: 5rem;
     padding: 1rem 0;
     list-style: none;
