--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,42 +13,30 @@
     --font-roboto-mono: 'Roboto Mono', monospace;
   }
 
+
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+*, :after, :before {
+  box-sizing: border-box;
 }
 
 html,
 body {
-  max-width: 100vw;
   overflow-x: hidden;
-  background-color: rgba(var(--clr-4), 1);
+  scroll-snap-type: y mandatory !important;
+  scroll-behavior: smooth !important;
+}
+
+html {
+  scroll-padding-top: 5rem;
 }
 
 body {
-  scroll-snap-type: y mandatory;
-  scroll-behavior: smooth;
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
   background-color: rgb(var(--clr-4));
-  overflow-x: hidden;
 }
-
-/* body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: radial-gradient(circle, rgb(var(--clr-3)) 10%, rgb(var(--clr-4)) 25%);
-  background-size: .5rem .5rem;
-  opacity: 1;
-  pointer-events: none;
-} */
-
 
 a {
   color: inherit;
